--- a/.github/workflows/check_linter.yml
+++ b/.github/workflows/check_linter.yml
@@ -16,11 +16,11 @@ jobs:
         with:
           python-version: 3.11
       - name: Install dependencies
-      - run: |
+        run: |
           python -m pip install --upgrade pip
           pip install -r spider/requirements.txt
       - name: Lint with flake8
-      - run: |
+        run: |
           pip install flake8
           flake8 --ignore=E501 spider
           
