--- a/.github/workflows/check_linter.yml
+++ b/.github/workflows/check_linter.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: 3.11
+          cache: 'pip'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
