--- a/.github/workflows/lint_and_push.yml
+++ b/.github/workflows/lint_and_push.yml
@@ -29,6 +29,7 @@ jobs:
           pip install flake8
           flake8 --ignore=E501 spider
   build:
+    needs: lint
     runs-on: ubuntu-latest
     steps:
       - 
