--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -2,6 +2,9 @@ name: Runner
 on:
   schedule:
     - cron: '4 * * * *'
+    - cron: '10 * * * *'
+    - cron: '15 * * * *'
+
 jobs:
   test_shedule:
     runs-on: ubuntu-latest
