--- a/.github/workflows/lint_and_push.yml
+++ b/.github/workflows/lint_and_push.yml
@@ -63,6 +63,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
         script: |
+          cd /app/newsmakers/
           docker compose down
           docker compose pull spider
           docker compose --env-file .env.upd up -d
