--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,12 +6,16 @@ on:
     - cron: '45 23 * * *'
 
 jobs:
-  test_shedule:
+  run_crawler:
     runs-on: ubuntu-latest
     steps:
-      -
-        name: Calling the spider
-        run: |
+    - name: executing remote ssh commands using key
+      uses: appleboy/ssh-action@v0.1.8
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        key: ${{ secrets.KEY }}
+        script: |
           cd /app/newsmakers/
           docker compose --env-file .env.crawl up -d
         
